# arc-to-zen

./: .gitignore  AGENTS.md  README.md  cli.py  desktop.py  desktop_app.py  migrate_arc_favicons.py  pyproject.toml  requirements-build.txt  sync_arc_folder_states.py  sync_arc_workspace_icons.py  sync_arc_workspace_themes.py  zen_sessions_importer_v4.py
.github/workflows/: ci.yml  release.yml
assets/: app-icon.icns
scripts/: build_desktop.py  generate_icon_assets.py  render_readme_screenshot.py
src/: __init__.py  arc_pinned_tab_extractor.py
src/arc2zen/: __init__.py  cli.py  desktop.py  extract.py  favicons.py  folder_states.py  migration.py  profile_paths.py  sessions.py  workspace_icons.py  workspace_themes.py
